# quest-sage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml
qs-client/: Cargo.toml  build.rs
qs-client/assets/ui/: .gitignore  atlas.json
qs-client/src/: main.rs
qs-client/src/assets/: mod.rs
qs-client/src/compiled_assets/: README.md
qs-client/src/compiled_assets/shaders/: shader.frag  shader.vert
qs-client/src/graphics/: batch.rs  camera.rs  mod.rs  multi_batch.rs  shader.frag  shader.vert  text.frag  text.rs  texture.rs
qs-client/src/ui/: button.rs  colour.rs  field.rs  mod.rs  text.rs  texture.rs  widget.rs
qs-common/: Cargo.toml
qs-common/src/: lib.rs  profile.rs
qs-common/src/assets/: manager.rs  mod.rs  path.rs
qs-server/: Cargo.toml
texture-atlas/: Cargo.toml  README.md
texture-atlas/src/: lib.rs
