[package]
name = "qs-client"
version = "0.1.0"
authors = ["thirdsgames <thirdsgames2018@gmail.com>"]
edition = "2018"

[dependencies]
qs-common = { path = "../qs-common" }

# Window and maths libraries
image = "0.23"
winit = "0.23"
cgmath = "0.17"
wgpu = "0.6"
bytemuck = "1.4"

# Text rendering and caching library
rusttype = { version = "0.9.2", features = ["gpu_cache"] }

# Multithreaded runtime
tokio = { version = "0.3", features = ["rt-multi-thread", "macros", "sync", "stream"] }
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
futures = "0.3"

# Design by contract assertions
contracts = "0.6"

# Library for making the debug screen
itertools = "0.9"

# Flexbox library
stretch = "0.3.2"

# Utilities
lazy_static = "1.4"
async-trait = "0.1.41"

# Texture packer
serde_json = "1.0"
texture-atlas = { path = "../texture-atlas" }

[build-dependencies]
# GLSL to SPIR-V shader compilation utilities
shaderc = "0.7"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

# Texture packer
texture_packer = { version = "0.21.1", features = [ "png" ] }
image = "0.23"
serde_json = "1.0"
texture-atlas = { path = "../texture-atlas" }